k8s/legacy/dev/apps/actualbudget/manifests/actualbudget.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: actualbudget
---
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actualbudget
  labels:
    app.kubernetes.io/instance: actualbudget
    app.kubernetes.io/name: actualbudget
    app.kubernetes.io/service: actualbudget
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5006
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: actualbudget
    app.kubernetes.io/name: actualbudget
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  namespace: actualbudget
  labels:
    app.kubernetes.io/instance: actualbudget
    app.kubernetes.io/name: actualbudget
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: actualbudget
      app.kubernetes.io/instance: actualbudget
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: actualbudget
        app.kubernetes.io/name: actualbudget
    spec:
      containers:
        - name: main
          image: actualbudget/actual-server:25.11.0
          volumeMounts:
            - name: actualbudget-pv
              mountPath: /data
      volumes:
        - name: actualbudget-pv
          persistentVolumeClaim:
            claimName: actualbudget-pvc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actualbudget-ingress
  namespace: actualbudget
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`actualbudget.dk8s.ipreston.net`)
      kind: Rule
      services:
        - name: actualbudget
          port: 80
  tls:
    secretName: actualbudget-web-ui-tls
